force-app/main/default/objects/SM_ACH_Order__c/SM_ACH_Order__c.object-meta.xml
<CustomObject>
    <label>ACH Order</label>
    <nameField>
        <displayFormat>ACH-{0000}</displayFormat>
        <label>ACH Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ACH Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>