force-app/main/default/objects/SM_ACH_Order__c/fields/ACH_Tax__c.field-meta.xml
<CustomField>
    <fullName>ACH_Tax__c</fullName>
    <formula>SM_IVU_Municipal_Amount__c +  IVU_State_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>