force-app/main/default/objects/SM_ACH_Order__c/fields/Discount_Original_Total__c.field-meta.xml
<CustomField>
    <fullName>Discount_Original_Total__c</fullName>
    <description>Registro del Valor original &quot;Total Amount&quot; [Total_Amount__c] antes de aplicar el descuento solicitado</description>
    <inlineHelpText>Registro del Valor original &quot;Total Amount&quot; [Total_Amount__c] antes de aplicar el descuento solicitado</inlineHelpText>
    <label>Discount Original Value (&quot;Total Amount&quot;)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>