force-app/main/default/objects/SM_ACH_Order__c/fields/Discount_Value_Afer_Discount_IVU__c.field-meta.xml
<CustomField>
    <fullName>Discount_Value_Afer_Discount_IVU__c</fullName>
    <formula>SM_Discount_Value_Afer__c + ( SM_Discount_Value_Afer__c * 0.115)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Value Afer Discount + IVU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>