force-app/main/default/objects/SM_ACH_Order__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>ACH Orders</relationshipLabel>
    <relationshipName>ACH_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>