force-app/main/default/objects/SM_ACH_Order__c/fields/Is_PTP__c.field-meta.xml
<CustomField>
    <fullName>Is_PTP__c</fullName>
    <formula>OR(ISBLANK(TEXT(SM_PTP_Montly__c)), ISNULL(TEXT(SM_PTP_Montly__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is PTP</label>
    <type>Checkbox</type>
</CustomField>