force-app/main/default/objects/SM_ACH_Order__c/fields/IVU_State_Amount__c.field-meta.xml
<CustomField>
    <fullName>IVU_State_Amount__c</fullName>
    <formula>SM_Total__c * SM_Contract__r.SM_Process_automation_by_product_family__r.SM_IVUStateAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IVU (State) Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>