force-app/main/default/objects/SM_ACH_Order__c/fields/Order_To_Be_Collected__c.field-meta.xml
<CustomField>
    <fullName>Order_To_Be_Collected__c</fullName>
    <formula>CASE(SM_Payment_Type__c,&apos;Late payment fee&apos;,1,&apos;AC&apos;,2,&apos;Fee&apos;,3,&apos;Subscription&apos;,4,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order To Be Collected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>