force-app/main/default/objects/SM_ACH_Order__c/fields/Payment_Catery__c.field-meta.xml
<CustomField>
    <fullName>Payment_Catery__c</fullName>
    <label>Payment Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
                <default>true</default>
                <label>NONE</label>
            </value>
            <value>
                <fullName>PTP WITH PENALTY</fullName>
            </value>
            <value>
                <fullName>PTP IN ADVANCE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>