force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Apply_Discount__c.field-meta.xml
<CustomField>
    <fullName>SM_Apply_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Discount</label>
    <type>Checkbox</type>
</CustomField>