force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Approval_status__c.field-meta.xml
<CustomField>
    <fullName>SM_Approval_status__c</fullName>
    <label>Approval status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SM_Approval_status</valueSetName>
    </valueSet>
</CustomField>