force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Bank__c.field-meta.xml
<CustomField>
    <fullName>SM_Bank__c</fullName>
    <formula>SM_Payment_Method__r.SM_Bank__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank</label>
    <type>Text</type>
</CustomField>