force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>SM_Billing_Email__c</fullName>
    <label>Billing Email</label>
    <type>Email</type>
</CustomField>