force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Charge_Date__c.field-meta.xml
<CustomField>
    <fullName>SM_Charge_Date__c</fullName>
    <label>Charge Date</label>
    <type>Date</type>
</CustomField>