force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Contract__c.field-meta.xml
<CustomField>
    <fullName>SM_Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>ACH Orders</relationshipLabel>
    <relationshipName>ACH_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>