force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Date_ACH_Transmitted__c.field-meta.xml
<CustomField>
    <fullName>SM_Date_ACH_Transmitted__c</fullName>
    <label>Date ACH Transmitted</label>
    <type>Date</type>
</CustomField>