force-app/main/default/objects/SM_ACH_Order__c/fields/SM_DaystocollectPrincipalpayment__c.field-meta.xml
<CustomField>
    <fullName>SM_DaystocollectPrincipalpayment__c</fullName>
    <formula>IF( 
	AND(
             TEXT(SM_Payment_Type__c)=&apos;Late payment fee&apos;,
             TEXT(SM_Payment_Status__c) = &apos;Stopped&apos;,
             SM_Bank__c = &quot;BANCO POPULAR&quot;
         ),        			 
	30 - CEILING((TODAY() -  SM_Date_ACH_Transmitted__c)), 
	IF(
		AND(
			 TEXT(SM_Payment_Type__c)=&apos;Late payment fee&apos;,
			 TEXT(SM_Payment_Status__c) = &apos;Stopped&apos;,
			 SM_Bank__c &lt;&gt; &quot;BANCO POPULAR&quot;
			),            
			  10 - CEILING((TODAY() -  SM_Date_ACH_Transmitted__c)),
			null
			) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to collect principal payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>