force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Discount_Applies_Date__c.field-meta.xml
<CustomField>
    <fullName>SM_Discount_Applies_Date__c</fullName>
    <label>Discount Applies Date</label>
    <type>DateTime</type>
</CustomField>