force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>SM_Discount_Percentage__c</fullName>
    <label>Discount Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>