force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Discount_Reason__c.field-meta.xml
<CustomField>
    <fullName>SM_Discount_Reason__c</fullName>
    <label>Discount Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>