force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Discount_Status__c.field-meta.xml
<CustomField>
    <fullName>SM_Discount_Status__c</fullName>
    <label>Discount Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Pending approval</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>