force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Discount_Value__c.field-meta.xml
<CustomField>
    <fullName>SM_Discount_Value__c</fullName>
    <label>Discount Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>