force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Discount_Value_Afer__c.field-meta.xml
<CustomField>
    <fullName>SM_Discount_Value_Afer__c</fullName>
    <formula>IF(
   AND(
      Discount_Original_Subtotal__c&gt;0,
      OR(SM_Discount_Percentage__c&gt;0,SM_Discount_Value__c &gt;0),
      ISPICKVAL(SM_Discount_Type__c , &quot;Percentage&quot;)),
   Discount_Original_Subtotal__c-(Discount_Original_Subtotal__c* SM_Discount_Percentage__c), 
   Discount_Original_Subtotal__c- SM_Discount_Value__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Value Afer Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>