force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Failed_AC_Transactions__c.field-meta.xml
<CustomField>
    <fullName>SM_Failed_AC_Transactions__c</fullName>
    <label>Failed AC Transactions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>