force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Failed_payment__c.field-meta.xml
<CustomField>
    <fullName>SM_Failed_payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Failed payment</label>
    <referenceTo>SM_Payment__c</referenceTo>
    <relationshipLabel>ACH Orders</relationshipLabel>
    <relationshipName>ACH_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>