force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Fee_to_collect__c.field-meta.xml
<CustomField>
    <fullName>SM_Fee_to_collect__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fee to collect</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>