force-app/main/default/objects/SM_ACH_Order__c/fields/SM_FinalStatus__c.field-meta.xml
<CustomField>
    <fullName>SM_FinalStatus__c</fullName>
    <label>Final Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CHARGED</fullName>
            </value>
            <value>
                <fullName>PENDING</fullName>
                <default>true</default>
                <label>PENDING</label>
            </value>
            <value>
                <fullName>IN PROGRESS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>