force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Id_Salesforce_LCS__c.field-meta.xml
<CustomField>
    <fullName>SM_Id_Salesforce_LCS__c</fullName>
    <externalId>true</externalId>
    <label>ANOTACIONES</label>
    <length>200</length>
    <type>Text</type>
</CustomField>