force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Is_Migrated__c.field-meta.xml
<CustomField>
    <fullName>SM_Is_Migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is migrated?</label>
    <type>Checkbox</type>
</CustomField>