force-app/main/default/objects/SM_ACH_Order__c/fields/SM_IsApplyingDaysCollectedPenalty__c.field-meta.xml
<CustomField>
    <fullName>SM_IsApplyingDaysCollectedPenalty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Applying Days Collected Penalty</label>
    <type>Checkbox</type>
</CustomField>