force-app/main/default/objects/SM_ACH_Order__c/fields/SM_last_update_date_transmitted__c.field-meta.xml
<CustomField>
    <fullName>SM_last_update_date_transmitted__c</fullName>
    <label>last update date transmitted</label>
    <type>Date</type>
</CustomField>