force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Migration_Date__c.field-meta.xml
<CustomField>
    <fullName>SM_Migration_Date__c</fullName>
    <label>Migration Date</label>
    <type>DateTime</type>
</CustomField>