force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Next_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>SM_Next_Transaction_Date__c</fullName>
    <label>Next Transaction Date</label>
    <type>Date</type>
</CustomField>