force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Original_Type__c.field-meta.xml
<CustomField>
    <fullName>SM_Original_Type__c</fullName>
    <formula>text(SM_Failed_payment__r.SM_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Type</label>
    <type>Text</type>
</CustomField>