force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Payment_Count__c.field-meta.xml
<CustomField>
    <fullName>SM_Payment_Count__c</fullName>
    <label>Payment Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>