force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>SM_Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Method</label>
    <referenceTo>SM_Payment_Method__c</referenceTo>
    <relationshipLabel>ACH Orders</relationshipLabel>
    <relationshipName>ACH_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>