force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Payment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SM_Payment_Start_Date__c</fullName>
    <label>Payment Start Date</label>
    <type>Date</type>
</CustomField>