force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Payment_Stop__c.field-meta.xml
<CustomField>
    <fullName>SM_Payment_Stop__c</fullName>
    <description>This will hold the method to stop the payments</description>
    <inlineHelpText>This will hold the method to stop the payments</inlineHelpText>
    <label>Payment Stop</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Count</fullName>
            </value>
            <value>
                <fullName>Unending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>