force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>SM_Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Late payment fee</fullName>
            </value>
            <value>
                <fullName>Suscripción</fullName>
                <isActive>false</isActive>
                <label>Suscripción</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>