force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Penalty_date__c.field-meta.xml
<CustomField>
    <fullName>SM_Penalty_date__c</fullName>
    <label>Penalty date</label>
    <type>Date</type>
</CustomField>