force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Penalty_value__c.field-meta.xml
<CustomField>
    <fullName>SM_Penalty_value__c</fullName>
    <label>Penalty value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>