force-app/main/default/objects/SM_ACH_Order__c/fields/SM_PTP_Montly__c.field-meta.xml
<CustomField>
    <fullName>SM_PTP_Montly__c</fullName>
    <label>PTP Montly</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PTP_Monthly</valueSetName>
    </valueSet>
</CustomField>