force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Quantity_of_scheduled_fees__c.field-meta.xml
<CustomField>
    <fullName>SM_Quantity_of_scheduled_fees__c</fullName>
    <label>Quantity of scheduled fees</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>