force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Reason_to_approve_exoneration__c.field-meta.xml
<CustomField>
    <fullName>SM_Reason_to_approve_exoneration__c</fullName>
    <label>Reason to approve exoneration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SM_Reason_to_approve_exoneration</valueSetName>
    </valueSet>
</CustomField>