force-app/main/default/objects/SM_ACH_Order__c/fields/SM_Total__c.field-meta.xml
<CustomField>
    <fullName>SM_Total__c</fullName>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>