force-app/main/default/objects/SM_ACH_Order__c/fields/SM_User_Who_Applies_Discount__c.field-meta.xml
<CustomField>
    <fullName>SM_User_Who_Applies_Discount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Who Applies Discount</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ACHOrders_Users</relationshipName>
    <type>Lookup</type>
</CustomField>