force-app/main/default/objects/SM_ACH_Order__c/fields/SM_User_who_applies_the_penalty__c.field-meta.xml
<CustomField>
    <fullName>SM_User_who_applies_the_penalty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User who applies the penalty</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ACH_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>