force-app/main/default/objects/SM_ACH_Order__c/fields/SM_User_Who_Request_Discount__c.field-meta.xml
<CustomField>
    <fullName>SM_User_Who_Request_Discount__c</fullName>
    <label>User Who Request Discount</label>
    <length>200</length>
    <type>Text</type>
</CustomField>