force-app/main/default/objects/SM_ACH_Order__c/fields/User_Who_Approve_Discount__c.field-meta.xml
<CustomField>
    <fullName>User_Who_Approve_Discount__c</fullName>
    <label>User Who Approve Discount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>