force-app/main/default/objects/SM_ACH_Order__c/validationRules/VR001_ACH_Order_Canceled.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_ACH_Order_Canceled</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(SM_Payment_Status__c),
TEXT(PRIORVALUE(SM_Payment_Status__c))= &quot;Canceled&quot;, $Profile.Name &lt;&gt; &apos;System Administrator&apos;)</errorConditionFormula>
    <errorMessage>You cannot change the status of a canceled ACH order</errorMessage>
</ValidationRule>