force-app/main/default/objects/SM_ACH_Order__c/listViews/ACH_Stoped.listView-meta.xml
<ListView>
    <fullName>ACH_Stoped</fullName>
    <columns>NAME</columns>
    <columns>SM_Contract__c</columns>
    <columns>SM_Failed_payment__c</columns>
    <columns>SM_Total__c</columns>
    <columns>SM_Penalty_value__c</columns>
    <columns>SM_Next_Transaction_Date__c</columns>
    <columns>SM_Payment_Type__c</columns>
    <columns>SM_Payment_Status__c</columns>
    <columns>SM_FinalStatus__c</columns>
    <columns>SM_Payment_Condition__c</columns>
    <columns>SM_Payment_Count__c</columns>
    <columns>SM_Payment_Frequency__c</columns>
    <columns>SM_Fee_to_collect__c</columns>
    <columns>SM_Migration_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SM_Payment_Status__c</field>
        <operation>equals</operation>
        <value>Stopped</value>
    </filters>
    <label>ACH - Stopped</label>
</ListView>