force-app/main/default/objects/SM_ACH_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SM_Failed_AC_Transactions__c</columns>
    <columns>SM_Failed_payment__c</columns>
    <columns>SM_Failed_Transactions__c</columns>
    <columns>SM_Fee_to_collect__c</columns>
    <columns>SM_Total__c</columns>
    <columns>SM_Next_Transaction_Date__c</columns>
    <columns>SM_Payment_Condition__c</columns>
    <columns>SM_Payment_Count__c</columns>
    <columns>SM_Payment_End_Date__c</columns>
    <columns>SM_Payment_Frequency__c</columns>
    <columns>SM_Payment_Method__c</columns>
    <columns>SM_Payment_Start_Date__c</columns>
    <columns>SM_Payment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SM_Payment_Type__c</field>
        <operation>equals</operation>
        <value>Subscription</value>
    </filters>
    <label>All</label>
</ListView>