force-app/main/default/objects/SM_ACH_Order__c/listViews/Late_payment_Fee_Credit_Card.listView-meta.xml
<ListView>
    <fullName>Late_payment_Fee_Credit_Card</fullName>
    <columns>NAME</columns>
    <columns>SM_Billing_Email__c</columns>
    <columns>SM_Contract__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>SM_Failed_payment__c</columns>
    <columns>SM_Total__c</columns>
    <columns>SM_Bank__c</columns>
    <columns>SM_Payment_Frequency__c</columns>
    <columns>SM_DaystocollectPrincipalpayment__c</columns>
    <columns>SM_Next_Transaction_Date__c</columns>
    <columns>SM_Payment_Status__c</columns>
    <columns>SM_Payment_Type__c</columns>
    <columns>SM_User_who_applies_the_penalty__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SM_Payment_Type__c</field>
        <operation>equals</operation>
        <value>Late payment fee</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>10/1/2023 12:00 AM</value>
    </filters>
    <label>Late payment Fee ACH</label>
</ListView>